--- a/blog.css
+++ b/blog.css
@@ -281,3 +281,15 @@ footer a:hover {
     flex: 1 1 100%;
   }
 }
+.engagement {
+  font-size: 0.75rem; 
+  margin-bottom: 1rem; 
+}
+
+.engagement span {
+  font-size: 0.65rem; 
+}
+
+.engagement i {
+  font-size: 0.85rem; 
+}
